# kinit-fast-task

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  ruff.toml
alembic/: README  env.py
alembic/versions/: 2024_05_28_1229-27dc1247f153_.py  2024_05_28_1613-e9a450c4b914_.py  2024_05_28_1621-a1ab868f0727_.py
docs/: PEP.md  backgroup_tasks.md  todo.txt  使用 TypeVar 和直接使用实体类型的区别.md  单节点 MongoDB 数据库开启副本集.md
docs/待优化项目/excel/: __init__.py  excel_manage.py  excel_schema.py  import_manage.py  write_xlsx.py
docs/待优化项目/file/: __init__.py  aliyun_oss.py  file_base.py  file_manage.py
docs/待优化项目/interfaces/: __init__.py  bing_day_image.py  gaode_weather.py  ip_location.py  ip_manage.py
docs/待优化项目/sms/: __init__.py  aliyun.py  code.py  reset_passwd.py
docs/待优化项目/wx/: __init__.py  oauth.py  wx_access_token.py
kinit_fast_task/: celery_worker.py  config.py  main.py
kinit_fast_task/app/: __init__.py
kinit_fast_task/app/cruds/: __init__.py  auth_role_crud.py  (+6 more)
kinit_fast_task/core/: __init__.py  event.py  exception.py  log.py  logger.py  middleware.py  register.py  types.py
kinit_fast_task/db/: __init__.py  async_base.py  database_factory.py
kinit_fast_task/scripts/: __init__.py
kinit_fast_task/task/: __init__.py  main.py  schema.py
kinit_fast_task/utils/: __init__.py  aes_crypto.py  count.py  enum.py  logger.py  love.py  pdf_to_word.py  ppt_to_pdf.py  response.py  response_code.py  send_email.py  singleton.py  socket_client.py  tools.py  validator.py
tests/: __init__.py  conftest.py
(+106 files in other folders)
